[package]
name = "pixels_plot"
version = "0.1.0"
authors = ["Lucas Walter <wsacul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2

[dependencies]
byteorder = "1.3"
csv = "1.1"
pixels = "0.2.0"
winit = "0.24"
winit_input_helper = "0.9"
