<?xml version="1.0"?>
<package format="2">
  <name>rsc_test</name>
  <version>0.0.0</version>
  <description>The rsc_test ros rust corrosion package</description>

  <maintainer email="lucasw@todo.todo">lucasw</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
