[package]
name = "hello_world1"
version = "0.1.0"
authors = ["Lucas Walter <wsacul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello_world1"
path = "src/hello_world/main.rs"

[[bin]]
name = "loginfo"
path = "src/loginfo/main.rs"

[dependencies]
rosrust = "0.9.5"
rosrust_msg = "0.1.1"
